# webparse

./: .gitignore  LICENSE  README.md  parse  pyproject.toml
apple-vision-ocr/: Package.swift
apple-vision-ocr/Sources/AppleVisionOCR/: main.swift
configs/: glmocr-mlx-local.yaml
hyocr/: __init__.py  __main__.py  cli.py  config.py  merge_results.py  models.py  pdf.py  pipeline.py  quality.py  routing.py
hyocr/adapters/: __init__.py  apple.py  glm.py
scripts/: glm_ocr_ollama.py  glm_ocr_wrapper.py  parse_with_glmocr_sdk.sh  start_mlx_server.sh
tests/: test_cleaner.py
tests/ocr/: test_e2e.py  test_explicit_engine.py  test_glm_adapter.py  test_merge_results.py  test_pipeline.py  test_quality.py  test_routing.py
tests/web/: test_cli_render.py  test_e2e.py  test_extractor.py  test_formatter.py  test_metadata.py  test_output_formats.py
webparse/: __init__.py  __main__.py  cleaner.py  cli.py  extractor.py  formatter.py  models.py
