[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "webparse"
version = "0.1.0"
description = "Universal web content parser - converts rendered HTML DOM to structured markdown for LLM consumption"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
webparse = "webparse.cli:main"

[tool.setuptools.packages.find]
include = ["webparse*"]
