[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webparse"
version = "0.2.0"
description = "Unified content parser — HTML→Markdown (webparse) + Image/PDF OCR (hyocr) + auto-routing CLI (parse)"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
webparse = "webparse.cli:main"
hyocr = "hyocr.cli:main"
parse = "parse:main"

[tool.setuptools.packages.find]
include = ["webparse*", "hyocr*"]

[tool.setuptools]
py-modules = ["parse"]
